--- a/mainsite/static/www/css/mainstyle.scss
+++ b/mainsite/static/www/css/mainstyle.scss
@@ -62,7 +62,7 @@ a {
 }
 .sponsored {
   padding:            5px 10px;
-  background-color:   $col-greenbar;
+  background-color:   $col-yellow;
   color:              $col-black;
   font-weight:        $font-bold;
   font-size:          12px;
