--- a/spe_blog/templates/spe_blog/plugins/article_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/article_detail.html
@@ -26,15 +26,14 @@
     </div>
 {% else %}
     <div class="col-sm-12 articleTitleBox">
-        {% if article.publication.code == "JPT" %}
-            <span class="categoryTitle">{{ article.category|removepub }}</span>
-        {% endif %}
-        {% if article.publication.code == "JPT" or article.publication.code == "OGF" %}
+        {% if article.publication.code == "OGF" %}
             {% if article.print_volume != null and article.print_issue != null %}
                 <span class="articleVolumeIssue">Volume: {{ article.print_volume }} | Issue: {{ article.print_issue }}</span>
             {% endif %}
         {% endif %}
-        <hr class="tiletitlehr">
+        {% if article.publication.code != 'JPT' %}
+            <hr class="tiletitlehr">
+        {% endif %}
         <h2 class="tiletitles">{{ article.title }}</h2>
     </div>
     <div class="row">
@@ -53,6 +52,10 @@
 {% if article.topics.all %}
     <div class="row">
         <div class="col-sm-12 article-topics dontPrintMe">
+
+        {% if article.publication.code == 'JPT' %}
+            <span class="topicTitle">Topics:</span> {% for topic in article.topics.all %}<span class="topicItem"><a href="/en/jpt/topics/?topic={{ topic.id }}">{{ topic }}</a></span> {% endfor %}
+        {% else %}
             <h4>Topics</h4>
             <ul>
             {% for topic in article.topics.all %}
@@ -65,6 +68,7 @@
                 {% endif %}
             {% endfor %}
             </ul>
+        {% endif %}
         </div>
     </div>
 {% endif %}
@@ -86,7 +90,7 @@
 {% endif %}
 
     <div class="col-sm-12 articleBodyText">
-
+{% if article.publication.code != 'JPT' %}
     {% if article.tags.count >= 1 %}
         <div class="col-sm-12 article-tags dontPrintMe">
             <ul>
@@ -96,15 +100,15 @@
             </ul>
         </div>
     {% endif %}
-
+{% endif %}
         {% if is_readable == True %}
 
             {% if show_paybox %}
                 <div class="col-sm-12 becomeMember text-center">
                     <p>You have access to this full article to experience the outstanding content<br>
-                        that is available to {{ article.publication.code }} subscribers and SPE members.</p>
+                        that is available to SPE members and {{ article.publication.code }} subscribers.</p>
                     <p>Please {% if is_loggedout %}<a href="{{ login.url }}" class="loginLink">{{ login.label }}</a>, {% endif %}<a href="http://www.spe.org/join/">JOIN SPE</a> or <a href="{{ article.publication.subscription_url }}">Subscribe to {{ article.publication.code }}</a><br>
-                    in order to gain full access to all that OGF has to offer.</p>
+                    in order to gain full access to all that {{ article.publication.code }} has to offer.</p>
             </div>
             {% endif %}
 
@@ -128,7 +132,30 @@
     <div class="col-sm-12 articleShares text-left dontPrintMe">
         {% include 'include_article_shares.html' %}
     </div>
+{% if article.publication.code == "JPT" %}
+    {% if article.tags.count >= 1 %}
+        <div class="col-sm-12 article-tags dontPrintMe">
+            <ul>
+            {% for tag in article.tags.all %}
+                    <li><a href="{{ article.publication.tags_url.url.get_absolute_url }}?tag={{ tag.id }}"><i class="fa fa-tags" aria-hidden="true"></i> {{ tag }}</a></li>
+            {% endfor %}
+            </ul>
+        </div>
+    {% endif %}
+    <div class="subInfoBox col-sm-12">
+        <div class="col-sm-9">
+            <p class="reTitle">{{ article.title }}</p>
+            <p class="reAuthor">{{ article.author }}</p>
+            <p class="reDate">{{ article.date|date:"d F Y" }}</p>
+        </div>
+        <div class="col-sm-3">
+            {% if article.print_volume != null and article.print_issue != null %}
+                <span class="articleVolumeIssue">Volume: {{ article.print_volume }} | Issue: {{ article.print_issue }}</span>
+            {% endif %}
+        </div>
 
+    </div>
+{% endif %}
 </div>
 <div class="dontPrintMe">
     {# glenda wants the 3 most related topics articles #}
