--- a/spe_promotions/templates/spe_promotions/plugins/overlay.html
+++ b/spe_promotions/templates/spe_promotions/plugins/overlay.html
@@ -6,7 +6,7 @@
                 <div class="story-text">
                     <h2>{{ promo.event }}</h2>
             {% if promo.sponsored %}
-                <p class="sponsored">SPONSORED</p>
+                <p class="sponsored">SPONSORED CONTENT</p>
             {% endif %}
                     <p>{{ promo.teaser | safe }}</p>
                 </div>
