--- a/mainsite/static/jpt/css/_content.scss
+++ b/mainsite/static/jpt/css/_content.scss
@@ -320,6 +320,23 @@
     margin:             0 0 15px 0 !important;
   }
 }
+.subInfoBox {
+  //background-color: $col-lightgrey;
+  padding:    10px 0;
+  border-top:     1px dotted $col-grey;
+  border-bottom:  1px dotted $col-grey;
+
+  p {
+    padding:  0;
+    margin:   0;
+  }
+
+  .reTitle {
+    font-size:    16px;
+    font-weight:  $font-bold;
+    margin-bottom: 10px;
+  }
+}
 .ratingStars {
   color:                $col-rating;
   white-space:          nowrap;
@@ -339,10 +356,18 @@
   margin-bottom:        20px;
   padding-left:         0;
   padding-right:        0;
+
+  img {
+    max-width:          500px;
+    margin:             0 auto;
+  }
 }
 .articleBodyText {
   img {
-    margin:             0 10px 0 10px;
+    //margin:             0 10px 0 10px;
+    margin:             0 auto;
+    min-width:          100px;
+    height:             auto;
   }
 }
 .articleShares {
@@ -358,6 +383,12 @@
     }
   }
 }
+.topicTitle {
+  font-weight: $font-bold;
+}
+.topicItem {
+  padding-right: 5px;
+}
 .article-topics, .article-tags {
   background-color:   $col-lightgrey;
   padding:            10px;
@@ -367,7 +398,7 @@
   h4 {
     margin:           0 0 5px 0;
     padding-bottom:   5px;
-    border-bottom:    1px dotted $col-basegrey;
+    //border-bottom:    1px dotted $col-basegrey;
   }
   ul {
     list-style:       none;
@@ -735,4 +766,5 @@ table {
   display:            inline-block;
   width:              32%;
 }
+
 
