--- a/spe_promotions/templates/spe_promotions/plugins/image_text_below.html
+++ b/spe_promotions/templates/spe_promotions/plugins/image_text_below.html
@@ -16,7 +16,7 @@
             {% endif %}
                 <h3>{{ promo.event }}</h3>
             {% if promo.sponsored %}
-                <p class="sponsored">SPONSORED</p>
+                <p class="sponsored">SPONSORED CONTENT</p>
             {% endif %}
                 <p>{{ promo.teaser | safe }}</p>
             </div>
