--- a/mainsite/static/www/css/_header.scss
+++ b/mainsite/static/www/css/_header.scss
@@ -10,13 +10,17 @@
     background: url($img-logosprite) no-repeat;
 }
 .link-text {
-    width:80%;
-    float:right;
+    //width:100%;
+    //float:right;
+    display: inline-block;
 }
 .link-icon {
     float:left;
-    width:17%;
+    //width:17%;
+    //max-width: 70px;
+    width:70px;
     margin-right: 3px;
+    display: inline-block;
 
     &.events-calendar {
         background-position: 0 -57px;
