--- a/mainsite/templates/include_www_header.html
+++ b/mainsite/templates/include_www_header.html
@@ -133,7 +133,7 @@
 
             <!-- Publications -->
             <li class="dropdown yamm-fw"><a href="http://www.spe.org/publications/" data-toggle="dropdown" class="dropdown-toggle">Publications</a>
-              <ul class="dropdown-menu">
+              <ul class="dropdown-menu" style="/* display: block; */">
                 <li>
                   <div class="yamm-content">
                     <div class="row megarow">
@@ -269,7 +269,7 @@
 
             <!-- Resources -->
             <li class="dropdown yamm-fw"><a href="http://www.spe.org/industry/" data-toggle="dropdown" class="dropdown-toggle">Resources</a>
-              <ul class="dropdown-menu">
+              <ul class="dropdown-menu" style="/* display: block; */">
                 <li>
                   <div class="yamm-content">
                     <div class="row megarow">
