--- a/spe_blog/templates/spe_blog/plugins/article_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/article_detail.html
@@ -78,7 +78,7 @@
     {% endif %}
 
 {% if article.picture and article.picture.url %}
-    <div class="col-sm-12 articlePicture">
+    <div class="col-sm-6 col-sm-offset-3 articlePicture">
         <img src="{{article.picture.url}}" alt="{{article.alternate}}" class="img-responsive">
         {% if article.picture_attribution %}
             <div class="imgattrib">{{ article.picture_attribution }}</div>
@@ -201,6 +201,7 @@
         $( document ).ready(function() {
 
             $(".articleBodyText img").addClass("img-responsive");
+            $(".articleAuthorBox img").removeClass("img-responsive");
 
         });
     </script>
