--- a/spe_promotions/templates/spe_promotions/plugins/promotion_posts.html
+++ b/spe_promotions/templates/spe_promotions/plugins/promotion_posts.html
@@ -14,8 +14,8 @@
                 {% if promo.sponsored %}
                     <p class="sponsored" style="margin:5px 0;">SPONSORED CONTENT</p>
                 {% endif %}
-                <span class="sideListDateTWA">{{ promo.event_date }}</span>
-                <span class="sideListDateTWA">{{ promo.event_location }}</span>
+                <span class="sideListDateTWA">{{ promo.event_date }} - {{ promo.event_location }}</span>
+{#                <span class="sideListDateTWA"></span>#}
             </div>
             </a>
         </div>
