--- a/spe_blog/templates/spe_blog/plugins/overlay.html
+++ b/spe_blog/templates/spe_blog/plugins/overlay.html
@@ -4,11 +4,13 @@
             <a href="{{ article.get_absolute_url }}">
             <div class="story-wrap" style="background-image:url({{ article.picture.url }});">
                 <div class="story-text">
-                    <h2>{{ article.title }}</h2>
-                    <p>{{ article.teaser }}</p>
-                    {% if article.sponsored %}
-                    <p><span class="sponsored">SPONSORED</span></p>
-                    {% endif %}
+                    <div class="storyTextContent">
+                        <h2>{{ article.title }}</h2>
+                        <p>{{ article.teaser }}</p>
+                        {% if article.sponsored %}
+                        <p><span class="sponsored">SPONSORED</span></p>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
             </a>
