--- a/mainsite/static/jpt/css/mainstyle.scss
+++ b/mainsite/static/jpt/css/mainstyle.scss
@@ -191,3 +191,10 @@ a {
 .padR10, #padR10 {
   padding-right:  10px;
 }
+.padL10, #padL10 {
+  padding-left:  10px;
+}
+.padB10, #padB10 {
+  padding-right:  10px;
+  padding-left:  10px;
+}
