--- a/mainsite/static/jpt/css/mainstyle.css
+++ b/mainsite/static/jpt/css/mainstyle.css
@@ -1607,3 +1607,10 @@ table {
 
 .padR10, #padR10 {
   padding-right: 10px; }
+
+.padL10, #padL10 {
+  padding-left: 10px; }
+
+.padB10, #padB10 {
+  padding-right: 10px;
+  padding-left: 10px; }
