--- a/mainsite/templates/include_ogf_footer.html
+++ b/mainsite/templates/include_ogf_footer.html
@@ -33,8 +33,7 @@
                 <h3>UTILITY</h3>
                 <p><a href="/en/ogf/about-ogf/">About</a></p>
                 <p><a href="http://www.spe.org/contact/">Contact</a></p>
-                <p><a href="http://www.spe.org/publications/subscribe.php">Subscribe</a></p>
-                <p><a href="http://www.spe.org/sales/publications.php">Advertise</a></p>
+                <p><a href="https://www.spe.org/en/ogf/advertise">Advertise</a></p>
             </div>
             <div class="col-md-3">
                 <h3>SPE</h3>
