--- a/mainsite/templates/plugins/marketo_form.html
+++ b/mainsite/templates/plugins/marketo_form.html
@@ -24,6 +24,12 @@
 </div>
    
 <div id="thankyouDiv" style="display:none;">{{ thank_you }}</div>
+{##}
+{#<script type="text/javascript" charset="utf-8">#}
+{#    $( document ).ready(function() {#}
+{#        $("label").after("<br>");#}
+{#    });#}
+{#</script>#}
  
 
 
