--- a/spe_blog/templates/spe_blog/plugins/brief_list_pics.html
+++ b/spe_blog/templates/spe_blog/plugins/brief_list_pics.html
@@ -13,15 +13,11 @@
             </div>
         {% endif %}
     {% elif pubcode == "JPT" %}
-        {% if boxtitle != null %}
-            <div class="col-xs-12 sideListBoxTitle">
-                <span class="boxTitleText col-xs-12" style="background-color:#e51837;">{{ boxtitle }} </span>
-            </div>
-{#        {% else %}#}
+{#        {% if boxtitle != null %}#}
 {#            <div class="col-xs-12 sideListBoxTitle">#}
-{#                <span class="boxTitleText col-xs-12" style="background-color:#e51837;">Trending</span>#}
+{#                <span class="boxTitleText col-xs-12" style="background-color:#e51837;">{{ boxtitle }} </span>#}
 {#            </div>#}
-        {% endif %}
+{#        {% endif %}#}
     {% endif %}
 {% for article in articles %}
 {#    <div class="row">#}
