--- a/spe_blog/templates/spe_blog/regional_briefs.html
+++ b/spe_blog/templates/spe_blog/regional_briefs.html
@@ -15,7 +15,7 @@ h2{
     width: 71.875%; /* 650/960 */
     max-width: 960px;
     text-align: left;
-    margin: 0px auto; /*auto centers the container */
+    margin: 0 auto; /*auto centers the container */
     padding: 3.84615384615385%; /* 25/650 */
 }
 /*CSS3 multiple columns.*/
