--- a/mainsite/static/jpt/css/_tiles.scss
+++ b/mainsite/static/jpt/css/_tiles.scss
@@ -200,7 +200,7 @@
   bottom:   15px;
 }
 .featured-story {
-  padding:              10px;
+  //padding:              10px;
   margin:               0;
   min-height:           360px;
 
@@ -212,17 +212,21 @@
 
     .story-text {
       padding:          15px 15px 15px 15px;
-      background:       $img-twa-feature repeat-x top right;
+      background:       $img-back-black-50 repeat-x top right;
       background-size:  contain;
       position:         absolute;
       bottom:           0;
       width:            100%;
-      height:           100%;
+      //height:           100%;
 
       h2 {
         font-family:    $font-tiletitle;
         font-weight:    600;
         font-size:      20px;
+      }
+      p {
+        font-weight:    600;
+        font-size:      18px;
       }
     }
   }
@@ -232,9 +236,10 @@
       overflow:         hidden;
 }
 .storyTextContent {
-  position:             absolute;
+  //position:             absolute;
   bottom:               0;
 }
+
 .whitefadebottom {
   background:           $img-whitefade repeat-x bottom left;
   height:               20px;
@@ -283,6 +288,8 @@
   margin-top:           5px;
   //padding:              5px 0 0 10px;
   line-height:          1em;
+  padding-left:         10px;
+  padding-bottom:       5px;
 
   a:hover {
     color:              $col-bluehover;
@@ -702,9 +709,23 @@
 }
 .marketoForm {
   margin-bottom:        15px;
-  padding:              0 20px;
+  padding:              0 10px;
   form {
-      margin-top:       15px;
+    margin-top:         15px;
+
+    .mktoOffset {
+      display:          none;
+    }
+
+    label {
+      width:            80px !important;
+    }
+    .mktoField {
+      width:            60% !important;
+    }
+    .mktoButtonWrap {
+      margin-left:      0 !important;
+    }
   }
 }
 .coverblurb {
