--- a/spe_blog/templates/spe_blog/plugins/topics_list_3col.html
+++ b/spe_blog/templates/spe_blog/plugins/topics_list_3col.html
@@ -11,6 +11,7 @@
 
                     <div class="col-sm-4 topicListItem">
                         <a href="{{ publication.get_absolute_topics_url }}?topic={{ topic.id }}">
+{#                            <p>{{ publication.code }} : {{ topic.name }}</p>#}
                             <p>{{ topic.name }}</p>
                         </a>
                     </div>
