show more link fix and jpt body img padding

--- a/mainsite/static/jpt/css/_content.scss
+++ b/mainsite/static/jpt/css/_content.scss
@@ -372,8 +372,8 @@
 
 .articleBodyText {
   img {
-    //margin:             0 10px 0 10px;
-    margin:             0 auto;
+    margin:             0 10px 0 10px;
+    //margin:             0 auto;
     //min-width:          100px;
     //height:             auto;
   }
